Agregué el html y el css del blog

--- a/blog.html
+++ b/blog.html
@@ -11,11 +11,10 @@
 </head>
 <body>
 
-
     <section class="hero-text-section">
         <div class="container">
             <h1>Las Timar</></h1>
-            <p>///post-punk CDMX///</p>
+            <p>///Atizapán post-punk///</p>
         </div>
     </section>
 
@@ -34,6 +33,80 @@
     <div class="hero">
         <img src="img/lasTimar2.jpg" alt="Las Timar" class="hero-img">
     </div>
+
+    <section class="blog-section">
+        <div class="container">
+            <h2 class="blog-title">crónicas del inframundo</h2>
+            <p class="blog-subtitle">notas desde un sótano en Atizapán</p>
+
+            <div class="blog-grid">
+
+                <!-- ENTRADA 1 -->
+                <article class="blog-item">
+                    <div class="blog-img-wrapper">
+                        <img src="img/blog1.jpg" alt="Ensayo en el sótano" class="blog-img">
+                    </div>
+                    <div class="blog-content">
+                        <h3 class="blog-item-title">El ruido que no duerme</h3>
+                        <p class="blog-date">03 NOV 2025</p>
+                        <p class="blog-excerpt">
+                            Tres horas de distorsión, una guitarra rota y un amplificador que huele a quemado. 
+                            Así nació "Callejón sin salida". Aquí va el detrás de cámaras.
+                        </p>
+                        <a href="#" class="blog-readmore">LEER MÁS →</a>
+                    </div>
+                </article>
+
+                <!-- ENTRADA 2 -->
+                <article class="blog-item">
+                    <div class="blog-img-wrapper">
+                        <img src="img/blog2.jpg" alt="Noche en el foro" class="blog-img">
+                    </div>
+                    <div class="blog-content">
+                        <h3 class="blog-item-title">Foro Alicia: crónica de una noche</h3>
+                        <p class="blog-date">28 OCT 2025</p>
+                        <p class="blog-excerpt">
+                            200 personas, sudor, cerveza derramada y un pogo que casi rompe el escenario. 
+                            Nuestra primera vez en el Alicia fue caos perfecto.
+                        </p>
+                        <a href="#" class="blog-readmore">LEER MÁS →</a>
+                    </div>
+                </article>
+
+                <!-- ENTRADA 3 -->
+                <article class="blog-item">
+                    <div class="blog-img-wrapper">
+                        <img src="img/blog3.jpg" alt="Grabación casera" class="blog-img">
+                    </div>
+                    <div class="blog-content">
+                        <h3 class="blog-item-title">Grabando en el cuarto de lavado</h3>
+                        <p class="blog-date">15 OCT 2025</p>
+                        <p class="blog-excerpt">
+                            Sin estudio, sin presupuesto, pero con una grabadora vieja y mucha actitud. 
+                            Así se hizo el demo que nadie esperaba.
+                        </p>
+                        <a href="#" class="blog-readmore">LEER MÁS →</a>
+                    </div>
+                </article>
+
+                <!-- ENTRADA 4 -->
+                <article class="blog-item">
+                    <div class="blog-img-wrapper">
+                        <img src="img/blog4.jpg" alt="Influencias" class="blog-img">
+                    </div>
+                    <div class="blog-content">
+                        <h3 class="blog-item-title">De Joy Division a la combi rota</h3>
+                        <p class="blog-date">01 OCT 2025</p>
+                        <p class="blog-excerpt">
+                            Nuestras influencias no son solo discos. Son noches sin dormir, combis que no arrancan y amigos que ya no están.
+                        </p>
+                        <a href="#" class="blog-readmore">LEER MÁS →</a>
+                    </div>
+                </article>
+
+            </div>
+        </div>
+    </section>
 
     
 
