Se agregó la sección de GALERÍA/en mantenimiento

--- a/blog.html
+++ b/blog.html
@@ -37,7 +37,7 @@
     <section class="blog-section">
         <div class="container">
             <h2 class="blog-title">crónicas del inframundo</h2>
-            <p class="blog-subtitle">notas desde un sótano en Atizapán</p>
+            <p class="blog-subtitle" id="tour-p">notas desde un sótano en Atizapán</p>
 
             <div class="blog-grid">
 
