--- a/galeria.html
+++ b/galeria.html
@@ -35,7 +35,16 @@
         <img src="img/lasTimar2.jpg" alt="Las Timar" class="hero-img">
     </div>
 
-    
+<!-- SECCIÓN GALERÍA - EN MANTENIMIENTO -->
+    <section class="mantenimiento-section">
+        <div class="container">
+            <h2 class="mantenimiento-title">///EN MANTENIMIENTO///</h2>
+            <p class="mantenimiento-subtitle">próximamente: fotos del caos, ensayos y arañas alimentándose</p>
+            <div class="mantenimiento-icon">
+                <span>⚡</span>
+            </div>
+        </div>
+    </section>
 
     <!-- FOOTER -->
 <footer class="footer">
