Se agregó el botón SUBIR con JS y también se agregaron las 4 imagenes del blog

--- a/galeria.html
+++ b/galeria.html
@@ -15,7 +15,7 @@
     <section class="hero-text-section">
         <div class="container">
             <h1>Las Timar</></h1>
-            <p>///post-punk CDMX///</p>
+            <p>///Atizapán post-punk///</p>
         </div>
     </section>
 
@@ -38,13 +38,18 @@
 <!-- SECCIÓN GALERÍA - EN MANTENIMIENTO -->
     <section class="mantenimiento-section">
         <div class="container">
-            <h2 class="mantenimiento-title">///EN MANTENIMIENTO///</h2>
-            <p class="mantenimiento-subtitle">próximamente: fotos del caos, ensayos y arañas alimentándose</p>
-            <div class="mantenimiento-icon">
-                <span>⚡</span>
-            </div>
+            <h2 class="mantenimiento-title">EN MANTENIMIENTO</h2>
+            <p class="mantenimiento-subtitle">próximamente: fotos ensayos y nuestras más recientes histerosalpingografías (HSG).</p>
         </div>
     </section>
+
+    <button id="btn-volver-arriba" aria-label="Volver arriba">
+        <svg width="22" height="22" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5">
+            <path d="M12 19V5M5 12l7-7 7 7"/>
+        </svg>
+    </button>
+
+    <script src="script.js"></script>
 
     <!-- FOOTER -->
 <footer class="footer">
