--- a/index.html
+++ b/index.html
@@ -33,12 +33,21 @@
         <img src="img/lasTimar2.jpg" alt="Las Timar" class="hero-img">
     </div>
 
-    <!-- FOOTER -->
-<footer class="footer">
-  <p>
-    Developed by INSOMNE/2025<sup>&reg;</sup>
-  </p>
-</footer>
+    <!-- BOTÓN VOLVER ARRIBA - Las Timar style -->
+    <button id="btn-volver-arriba" aria-label="Volver arriba">
+        <svg width="22" height="22" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5">
+            <path d="M12 19V5M5 12l7-7 7 7"/>
+        </svg>
+    </button>
+
+        <!-- FOOTER -->
+    <footer class="footer">
+        <p>
+            Developed by INSOMNE/2025<sup>&reg;</sup>
+        </p>
+    </footer>
+
+    <script src="script.js"></script>
 
 </body>
 </html>
