--- a/tour.html
+++ b/tour.html
@@ -100,6 +100,14 @@
         
         <p class="tour-note" id="tour-p">*Fechas sujetas a cambios. Sigue nuestras redes para cualquier actualización.*</p>
     </section>
+
+    <button id="btn-volver-arriba" aria-label="Volver arriba">
+        <svg width="22" height="22" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5">
+            <path d="M12 19V5M5 12l7-7 7 7"/>
+        </svg>
+    </button>
+
+    <script src="script.js"></script>
     
 
     <!-- FOOTER -->
