--- a/blog.html
+++ b/blog.html
@@ -44,14 +44,13 @@
                 <!-- ENTRADA 1 -->
                 <article class="blog-item">
                     <div class="blog-img-wrapper">
-                        <img src="img/blog1.jpg" alt="Ensayo en el sótano" class="blog-img">
+                        <img src="img/blog1.webp" alt="Siouxsie Sioux" class="blog-img">
                     </div>
                     <div class="blog-content">
-                        <h3 class="blog-item-title">El ruido que no duerme</h3>
+                        <h3 class="blog-item-title">Siouxsie Sioux y nosotras</h3>
                         <p class="blog-date">03 NOV 2025</p>
                         <p class="blog-excerpt">
-                            Tres horas de distorsión, una guitarra rota y un amplificador que huele a quemado. 
-                            Así nació "Callejón sin salida". Aquí va el detrás de cámaras.
+                            Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore.
                         </p>
                         <a href="#" class="blog-readmore">LEER MÁS →</a>
                     </div>
@@ -60,15 +59,12 @@
                 <!-- ENTRADA 2 -->
                 <article class="blog-item">
                     <div class="blog-img-wrapper">
-                        <img src="img/blog2.jpg" alt="Noche en el foro" class="blog-img">
+                        <img src="img/blog2.avif" alt="Sobredosis" class="blog-img">
                     </div>
                     <div class="blog-content">
-                        <h3 class="blog-item-title">Foro Alicia: crónica de una noche</h3>
+                        <h3 class="blog-item-title">35 minutos en estado de coma</h3>
                         <p class="blog-date">28 OCT 2025</p>
-                        <p class="blog-excerpt">
-                            200 personas, sudor, cerveza derramada y un pogo que casi rompe el escenario. 
-                            Nuestra primera vez en el Alicia fue caos perfecto.
-                        </p>
+                        <p class="blog-excerpt">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident.</p>
                         <a href="#" class="blog-readmore">LEER MÁS →</a>
                     </div>
                 </article>
@@ -79,11 +75,10 @@
                         <img src="img/blog3.jpg" alt="Grabación casera" class="blog-img">
                     </div>
                     <div class="blog-content">
-                        <h3 class="blog-item-title">Grabando en el cuarto de lavado</h3>
+                        <h3 class="blog-item-title">Grabando aullidos...</h3>
                         <p class="blog-date">15 OCT 2025</p>
                         <p class="blog-excerpt">
-                            Sin estudio, sin presupuesto, pero con una grabadora vieja y mucha actitud. 
-                            Así se hizo el demo que nadie esperaba.
+                            At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias.
                         </p>
                         <a href="#" class="blog-readmore">LEER MÁS →</a>
                     </div>
@@ -95,10 +90,10 @@
                         <img src="img/blog4.jpg" alt="Influencias" class="blog-img">
                     </div>
                     <div class="blog-content">
-                        <h3 class="blog-item-title">De Joy Division a la combi rota</h3>
+                        <h3 class="blog-item-title">Próxima estación: Joy Division</h3>
                         <p class="blog-date">01 OCT 2025</p>
                         <p class="blog-excerpt">
-                            Nuestras influencias no son solo discos. Son noches sin dormir, combis que no arrancan y amigos que ya no están.
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.
                         </p>
                         <a href="#" class="blog-readmore">LEER MÁS →</a>
                     </div>
@@ -108,6 +103,13 @@
         </div>
     </section>
 
+    <button id="btn-volver-arriba" aria-label="Volver arriba">
+        <svg width="22" height="22" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5">
+            <path d="M12 19V5M5 12l7-7 7 7"/>
+        </svg>
+    </button>
+
+    <script src="script.js"></script>
     
 
     <!-- FOOTER -->
