--- a/merch.html
+++ b/merch.html
@@ -91,7 +91,13 @@
     </div>
 </section>
 
-    
+    <button id="btn-volver-arriba" aria-label="Volver arriba">
+        <svg width="22" height="22" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5">
+            <path d="M12 19V5M5 12l7-7 7 7"/>
+        </svg>
+    </button>
+
+    <script src="script.js"></script>
 
     <!-- FOOTER -->
 <footer class="footer">
