Agregué img a MERCH, se corrigieron varios errores

--- a/blog.html
+++ b/blog.html
@@ -30,10 +30,6 @@
 
     <div class="burton-stripes"></div>
 
-    <div class="hero">
-        <img src="img/lasTimar2.jpg" alt="Las Timar" class="hero-img">
-    </div>
-
     <section class="blog-section">
         <div class="container">
             <h2 class="blog-title">crónicas del inframundo</h2>
@@ -44,7 +40,7 @@
                 <!-- ENTRADA 1 -->
                 <article class="blog-item">
                     <div class="blog-img-wrapper">
-                        <img src="img/blog1.webp" alt="Siouxsie Sioux" class="blog-img">
+                        <img src="img/BLOG/blog1.webp" alt="Siouxsie Sioux" class="blog-img" loading="lazy">
                     </div>
                     <div class="blog-content">
                         <h3 class="blog-item-title">Siouxsie Sioux y nosotras</h3>
@@ -59,7 +55,7 @@
                 <!-- ENTRADA 2 -->
                 <article class="blog-item">
                     <div class="blog-img-wrapper">
-                        <img src="img/blog2.avif" alt="Sobredosis" class="blog-img">
+                        <img src="img/BLOG/blog2.avif" alt="Sobredosis" class="blog-img" loading="lazy">
                     </div>
                     <div class="blog-content">
                         <h3 class="blog-item-title">35 minutos en estado de coma</h3>
@@ -72,7 +68,7 @@
                 <!-- ENTRADA 3 -->
                 <article class="blog-item">
                     <div class="blog-img-wrapper">
-                        <img src="img/blog3.jpg" alt="Grabación casera" class="blog-img">
+                        <img src="img/BLOG/blog3.jpg" alt="Grabación casera" class="blog-img" loading="lazy">
                     </div>
                     <div class="blog-content">
                         <h3 class="blog-item-title">Grabando aullidos...</h3>
@@ -87,7 +83,7 @@
                 <!-- ENTRADA 4 -->
                 <article class="blog-item">
                     <div class="blog-img-wrapper">
-                        <img src="img/blog4.jpg" alt="Influencias" class="blog-img">
+                        <img src="img/blog/blog4.jpg" alt="Influencias" class="blog-img" loading="lazy">
                     </div>
                     <div class="blog-content">
                         <h3 class="blog-item-title">Próxima estación: Joy Division</h3>
